name:          transients
category:      Data
version:       0
license:       BSD3
cabal-version: >= 1.22
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/transients/
bug-reports:   http://github.com/ekmett/transients/issues
copyright:     Copyright (C) 2015 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.10.1
synopsis:      Transients
description:   Transients

extra-source-files:
  examples/Tree.hs
  HLint.hs
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/transients.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

-- You can disable the doctests test suite with -f-test-doctests
flag test-hlint
  default: True
  manual: True

-- You can disable the wordmap benchmark suite with -f-benchmark-wordmap
flag benchmark-wordmap
  default: True
  manual: True

library
  build-depends:
    base >= 4.8 && < 5,
    deepseq,
    ghc-prim,
    lens,
    primitive

  exposed-modules:
    Data.Transient.Primitive.Exts
    Data.Transient.Primitive.PrimRef
    Data.Transient.Primitive.SmallArray
    Data.Transient.Vector
    Data.Transient.WordMap

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base >= 4.8,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath,
      parallel

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

benchmark wordmap
  type:             exitcode-stdio-1.0
  main-is:          wordmap.hs
  ghc-options:      -Wall -O2
  hs-source-dirs:   benchmarks benchmarks/wordmap
  default-language: Haskell2010
  if !flag(benchmark-wordmap)
    buildable: False
  else

    build-depends:
      base >= 4.8,
      containers,
      criterion,
      deepseq,
      ghc-prim,
      unordered-containers,
      primitive,
      transients,
      lens
